--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^8.0.2",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.19",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.5.0",
@@ -52,7 +53,12 @@
     "gitEmail": "seestein9@gmail.com",
     "commitMessage": "deploy storybook"
   },
-  "dependencies": {},
+  "dependencies": {
+    "moment": "^2.22.2",
+    "classnames": "^2.2.6",
+    "react": "^16.4.2",
+    "react-dom": "^16.5.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/unbugx/react-flex-picker.git"
