--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
   "include": [
     "./src/**/*"
   ],
-  "exclude": ["dist", "build", "node_modules", "src/stories"]
+  "exclude": ["dist", "build", "node_modules"]
 }
