--- a/package.json
+++ b/package.json
@@ -31,10 +31,8 @@
     "@types/stylus": "^0.48.30",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.2",
-    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.19",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.5.0",
     "stylus": "^0.54.5",
@@ -54,7 +52,8 @@
     "commitMessage": "deploy storybook"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "moment": "^2.22.2"
   },
   "repository": {
     "type": "git",
